reactive-kafka/paymentprocessor-kafka-intro/kubernetes/paymentprocessor-paymentvalidator-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/git-branch: reactive-kafka
    jkube.io/git-url: https://github.com/ravening/SpringBoot.git
    jkube.io/git-commit: 70a04f5eda89988cd5c9280bd730d8dbbb55c952
    jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/paymentprocessor/paymentprocessor-paymentvalidator
    jkube.io/scm-tag: HEAD
  labels:
    app: paymentprocessor-paymentvalidator
    provider: jkube
    version: 0.0.1
    group: com.rakeshv.paymentprocessor
  name: paymentprocessor-paymentvalidator
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: paymentprocessor-paymentvalidator
      provider: jkube
      group: com.rakeshv.paymentprocessor
  template:
    metadata:
      annotations:
        jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/paymentprocessor/paymentprocessor-paymentvalidator
        jkube.io/git-url: https://github.com/ravening/SpringBoot.git
        jkube.io/scm-tag: HEAD
        jkube.io/git-commit: 70a04f5eda89988cd5c9280bd730d8dbbb55c952
        jkube.io/git-branch: reactive-kafka
      labels:
        app: paymentprocessor-paymentvalidator
        provider: jkube
        version: 0.0.1
        group: com.rakeshv.paymentprocessor
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: docker.io/rakgenius/paymentprocessor-paymentvalidator:0.0.1
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8081
          name: sunproxyadmin
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
